<resources>
    <string name="app_name">Age Calculator</string>
    <string name="banner_text">Let\'s see how old you are!</string>
    <string name="f_name_hint">Enter your first name*</string>
    <string name="l_name_hint">Enter your last name*</string>
    <string name="dob_hint">Enter your date of birth (mm/dd/yyyy)*</string>
    <string name="calculate_age">Calculate age</string>
    <string name="f_name_validation_msg">Please enter a valid first name</string>
    <string name="l_name_validation_msg">Please enter a valid last name</string>
    <string name="dob_validation_msg">Please enter a valid date of birth (mm/dd/yyyy)</string>
</resources>