<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/banner_text"
        android:textSize="25dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@color/purple_700"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">

        <EditText
            android:id="@+id/f_name_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/f_name_hint"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:maxLength="25"
            android:textSize="20dp"
            />
        <TextView
            android:id="@+id/fname_validation_label"
            android:textColor="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/f_name_validation_msg"/>

        <EditText
            android:id="@+id/l_name_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/l_name_hint"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:maxLength="25"
            android:textSize="20dp"
            />
        <TextView
            android:id="@+id/lname_validation_label"
            android:textColor="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/l_name_validation_msg"/>

        <EditText
            android:id="@+id/dob_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/dob_hint"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="20dp"
            />
        <TextView
            android:id="@+id/dob_validation_label"
            android:textColor="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/dob_validation_msg"/>

        <Button
            android:id="@+id/calculate_btn"
            android:text="@string/calculate_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/test_result_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</LinearLayout>